k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homelab-web

spec:
  replicas: 1

  selector:
    matchLabels:
      app: homelab-web

  template:
    metadata:
      labels:
        app: homelab-web

    spec:
      containers:
        - name: web
          image: ghcr.io/msmidegas/homelab-web:latest
          imagePullPolicy: Always
          
          ports:
            - containerPort: 3000
