k8s/postgres.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: postgres

spec:
  replicas: 1

  selector:
    matchLabels:
      app: postgres

  template:
    metadata:
      labels:
        app: postgres

    spec:
      containers:
        - name: postgres

          image: postgres:15

          ports:
            - containerPort: 5432

          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data


      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc


---
apiVersion: v1
kind: Service

metadata:
  name: db

spec:
  selector:
    app: postgres

  ports:
    - port: 5432
      targetPort: 5432
