k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homelab-web-service
spec:
  selector:
    app: homelab-web
  ports:
    - port: 80
      targetPort: 3000
  type: NodePort
